[project]
name = "degen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatch>=1.13.0",
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "polars>=1.10.0",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
